--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
+    "prepare": "cd ../ && husky install ./web/.husky",
     "pre-commit": "next lint"
   },
   "dependencies": {
