--- a/web/package.json
+++ b/web/package.json
@@ -6,16 +6,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "cd ../ && husky install ./web/.husky",
-    "pre-commit": "next lint"
+    "prepare": "cd ../ && husky install ./web/.husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.3",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-use-websocket": "^3.0.0",
     "sass": "^1.49.7"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "husky": "^7.0.4"
