--- a/web/package.json
+++ b/web/package.json
@@ -15,10 +15,11 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-use-websocket": "^3.0.0",
     "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "babel-eslint": "^10.1.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
