join and create game logic

--- a/web/jsconfig.json
+++ b/web/jsconfig.json
@@ -1,8 +1,9 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@/components/*": ["components/*"]
-      }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"]
     }
-  }
+  },
+  "exclude": ["dist", "./node_modules", ".next"]
+}
