--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -4,5 +4,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "eslint.validate": ["javascript"]
+  "eslint.validate": ["javascript"],
+  "typescript.tsdk": "./node_modules/eslint-import-resolver-typescript/lib"
 }
