--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -23,6 +24,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "eslint-import-resolver-node": "^0.3.6",
     "husky": "^7.0.4"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
